This is a big one (though not yet complete or tested)!
* Servers can now be configured to do cold or live migration in Striker (however, the striker Migrate buttons don't honour it yet). Scripts are looked for in /shared/files and anything with an executable bit set will be presented to the user. Uploads will be handled by the media library, but that will be in a later commit.
* Server migration can now be handled by 'tools/anvil-migrate-server'.
** If a pre-migration script is set, it is called.
** Migration is then done either as a stop -> start process if the migration type was set to 'cold' or else a traditional live migration is done.
** If a post-migration script is set, it is called.
* A lot of scancore logging used in AN::Tools has been removed and replaced with messages from tools.xml.
* The new AN::Tools::Cman->get_clustat_data() method reads, parses and returns the cluster status information.
* The new AN::Tools::Get->shared_files() methos returns a list of all the files in /shared/files with a bit set to indicate if it looks like an ISO and if it is executable.
* The AN::Tools::Get->local_anvil_details() method returns the node health, as recorded in /shared/status/.<node>. Also fixed a bug where the wrong variable was used for the cluster.conf path.

Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -1403,20 +1403,46 @@
 <!-- start start-server-show-db-options -->
 	<tr>
 		<td class="highlight_good_bold">
-			#!string!row_0282!#
+			#!string!row_0293!#
 		</td>
 		<td style="text-align: left;">
-			#!replace!server_start_after!#<br />
-			<span class="subtle_text">#!string!explain_0101!#</span>
+			#!replace!server_migration_type!#<br />
+			<span class="subtle_text">#!string!explain_0158!#</span>
 		</td>
 	</tr>
 	<tr>
 		<td class="highlight_good_bold">
-			#!string!row_0283!#
+			#!string!row_0294!#
 		</td>
 		<td style="text-align: left;">
-			<input type="input" id="server_start_delay" name="server_start_delay" value="#!replace!server_start_delay!#" style="width: 100px;"> #!string!suffix_0015!#<br />
-			<span class="subtle_text">#!string!explain_0105!#</span>
+			#!replace!server_pre_migration_script!# <input type="input" id="server_pre_migration_arguments" name="server_pre_migration_arguments" value="#!replace!server_pre_migration_arguments!#" style="width: 250px;"> <br />
+			<span class="subtle_text">#!string!explain_0159!#</span>
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0295!#
+		</td>
+		<td style="text-align: left;">
+			#!replace!server_post_migration_script!# <input type="input" id="server_post_migration_arguments" name="server_post_migration_arguments" value="#!replace!server_post_migration_arguments!#" style="width: 250px;"> <br />
+			<span class="subtle_text">#!string!explain_0160!#</span>
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			&nbsp;
+		</td>
+		<td style="text-align: left;">
+			<span class="subtle_text">#!string!explain_0161!#</span>
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0282!#
+		</td>
+		<td style="text-align: left;">
+			<input type="input" id="server_start_delay" name="server_start_delay" value="#!replace!server_start_delay!#" style="width: 100px;" #!replace!server_start_delay_disabled!#> #!string!message_0452!# #!replace!server_start_after!# <br />
+			<span class="subtle_text">#!string!explain_0101!#</span>
 		</td>
 	</tr>
 	<tr>
