* Fixed issue #45 - Media Library now properly uploads and downloads files. Files that fail to download are automatically removed so that 0-byte files aren't left behind. * Extended Media Library to now support upload and downloading files with a 'script' flag. When set, the files is chmod'ed to 755. Existing files can have their executable bit toggled by a new pair of icons listed to the right of each file. Files recognized as optical media get a plastic circle icon and can not have their bit flipped. * Added three new icons for Media Lirary. * Created AN::Tools::Check->access() that returns '1' if ssh access to the target is available, 0 otherwise. * Extended AN::Tools::Get->shared_files() to query and return partition information for /shared. * Reworded some of the text in striker.conf to clarify variable use.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -299,6 +299,10 @@ $(function() {
 			<input type="#!replace!type!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" class="#!replace!class!#">
 <!-- end form-input -->
 
+<!-- start form-input-checkbox -->
+			<input type="checkbox" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" #!replace!checked!#>
+<!-- end form-input-checkbox -->
+
 <!-- start form-input-no-class -->
 			<input type="#!replace!type!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#">
 <!-- end form-input-no-class -->
