--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -606,19 +606,25 @@
 <br />
 <table width="100%">
 	<tr>
-		<td colspan="3" class="highlight_ready_bold">
+		<td colspan="4" class="highlight_ready_bold">
 			#!string!title_0139!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-			&nbsp;
+			<span class="table_header">#!string!row_0060!#</span>
 		</td>
 		<td>
 			<span class="table_header">#!string!row_0145!#</span>
 		</td>
 		<td>
-			<span class="table_header">#!string!row_0060!#</span>
+			<span class="table_header">#!string!row_0213!#</span>
+		</td>
+		<td>
+			<span class="table_header">#!string!row_0215!#</span>
+		</td>
+		<td>
+			<span class="table_header">#!string!row_0068!#</span>
 		</td>
 	</tr>
 <!-- end read-shared-list-header -->
@@ -630,6 +636,12 @@
 		</td>
 		<td>
 			<span class="fixed_width">#!replace!file!#</span>
+		</td>
+		<td>
+			#!replace!executable_button!#
+		</td>
+		<td>
+			#!replace!iso_icon!#
 		</td>
 		<td>
 			#!replace!delete_button!#
@@ -693,7 +705,7 @@
 <!-- start read-shared-direct-download -->
 <table width="100%">
 	<tr>
-		<td colspan="3" class="highlight_ready_bold">
+		<td colspan="4" class="highlight_ready_bold">
 			#!string!title_0141!#
 		</td>
 	</tr>
@@ -707,6 +719,9 @@
 			#!replace!url_input!#
 		</td>
 		<td>
+			#!string!message_0353!# #!replace!script_input!#
+		</td>
+		<td>
 			#!replace!download_button!#
 		</td>
 	</tr>
@@ -714,7 +729,7 @@
 		<td class="highlight_warning">
 			#!string!title_0142!#
 		</td>
-		<td colspan="3">
+		<td colspan="4">
 			<br />
 			#!string!message_0325!#<br />
 			<br />
@@ -729,7 +744,7 @@
 <form method="post" enctype="multipart/form-data">
 <table width="100%">
 	<tr>
-		<td colspan="3" class="highlight_ready_bold">
+		<td colspan="4" class="highlight_ready_bold">
 			#!string!title_0143!#
 		</td>
 	</tr>
@@ -742,6 +757,9 @@
 			#!replace!file_input!#
 		</td>
 		<td>
+			#!string!message_0353!# #!replace!script_input!#
+		</td>
+		<td>
 			#!replace!upload_button!#
 		</td>
 	</tr>
@@ -749,7 +767,7 @@
 		<td class="highlight_warning">
 			#!string!title_0142!#
 		</td>
-		<td colspan="3">
+		<td colspan="4">
 			<br />
 			<i>#!string!message_0326!#</i><br />
 			#!string!message_0327!#<br />
