* Updated striker migration to check to see if a given server is set to cold migration. If so, it prompts the user to confirm and warns them that a migration involves a reboot. * Updated tools/safe_anvil_shutdown to now call tools/anvil-migrate-server. * Changed the css slightly to make offline server names look better. * Fixed a bug where the shell call to migrate a server wasn't printing to stdout in tools/anvil-migrate-server
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -1236,7 +1236,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good"><b>#!string!row_0032!#</b></span>
+			<span class="highlight_warning"><b>#!string!row_0044!#</b></span>
 		</td>
 		<td>
 			<br />
