* Added support to Install Manifest for power transfer switches (PTSes).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -975,6 +975,10 @@
 						<input type="hidden" name="anvil_ups1_ip"                id="anvil_ups1_ip"                value="#!replace!anvil_ups1_ip!#" />
 						<input type="hidden" name="anvil_ups2_name"              id="anvil_ups2_name"              value="#!replace!anvil_ups2_name!#" />
 						<input type="hidden" name="anvil_ups2_ip"                id="anvil_ups2_ip"                value="#!replace!anvil_ups2_ip!#" />
+						<input type="hidden" name="anvil_pts1_name"              id="anvil_pts1_name"              value="#!replace!anvil_pts1_name!#" />
+						<input type="hidden" name="anvil_pts1_ip"                id="anvil_pts1_ip"                value="#!replace!anvil_pts1_ip!#" />
+						<input type="hidden" name="anvil_pts2_name"              id="anvil_pts2_name"              value="#!replace!anvil_pts2_name!#" />
+						<input type="hidden" name="anvil_pts2_ip"                id="anvil_pts2_ip"                value="#!replace!anvil_pts2_ip!#" />
 						<input type="hidden" name="anvil_pdu1_name"              id="anvil_pdu1_name"              value="#!replace!anvil_pdu1_name!#" />
 						<input type="hidden" name="anvil_pdu1_ip"                id="anvil_pdu1_ip"                value="#!replace!anvil_pdu1_ip!#" />
 						<input type="hidden" name="anvil_pdu1_agent"             id="anvil_pdu1_agent"             value="#!replace!anvil_pdu1_agent!#" />
