* Added the new 'tools/anvil-run-jobs' tool which, for now, replaces the old 'striker-delayed-run' tool. The old 'striker-delayed-run' might be useful in some case down the road, so it hasn't been removed for the time being but nothing uses it now. * Install Manifest now adds a cron job to run 'tools/anvil-run-jobs' once per minute on nodes. It looks for a /tmp/anvil.jobs file and, if found, reads it in. ** Each job is queued as 'timestamp:token:command'. If the timestamp is in the future, the job is ignored. If the time stamp is the current time or in the past, it is run. This method was implemented because cron, on at least two occassions, failed to run jobs queued by 'striker-delayed-run'. With this new scheme, any job still in the queue, regardless of age, is executed so missed jobs are significantly less likely. * Fixed a path in AN::Tools.pm. * Created the new AN::Tools::Remote->delayed_run() method that allows for arbitrary jobs to be run some time in the future. * Reworked AN::Tools::Remote->synchronous_command_run() to use the new 'tools/anvil-run-jobs' tool. * Created AN::Tools::Remote->_avoid_duplicate_delayed_runs() which is used by both AN::Tools::Remote->delayed_run() and AN::Tools::Remote->synchronous_command_run() to avoid queueing the same job twice. * Fixed a bug in AN::Tools::Storage->rsync() where the remote user was being passed to AN::Tools::Storage->add_target_to_known_hosts() in error. * Removed the ability to download individual Install Manifest files to avoid confusion with the general Backup/Load function.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1182,7 +1182,7 @@
 <!-- start install-manifest-header -->
 <table>
 	<tr>
-		<td colspan="10" class="highlight_ready_bold">
+		<td colspan="8" class="highlight_ready_bold">
 			#!string!title_0165!#
 		</td>
 	</tr>
@@ -1197,19 +1197,13 @@
 			#!replace!description!#
 		</td>
 		<td>
-			&nbsp;
+			&nbsp; &nbsp; &nbsp;
 		</td>
 		<td>
 			<a href="#!replace!load!#" class="button">#!string!button_0048!#</a>
 		</td>
 		<td>
-			&nbsp;
-		</td>
-		<td>
-			<a href="#!replace!download!#" class="button">#!string!button_0041!#</a>
-		</td>
-		<td>
-			&nbsp;
+			&nbsp; &nbsp; &nbsp;
 		</td>
 		<td>
 			<a href="#!replace!run!#" class="bold_button">#!string!button_0049!#</a>
