* Fixed a good number of the main bugs with the new AN::Tools::Get->template() method. * Cleaned up a lot of the ->error() method calls to use fewer lines. * Started removing the ability to call some methors as an array, forcing all method calls with variables to use hash keys. * Made AN::Tools::String->_restore_protected() substitute out #!conf!x!# strings as if they were #!data!x!# strings. * The new 'configure' tool is now properly loading pages using the new template method! Doesn't do much else, mind you...
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -2,7 +2,7 @@
 
 <!-- start configure-main-page -->
 <!DOCTYPE html>
-<html lang="#!data!sys::html_lang!#">
+<html lang="#!data!sys::language!#">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>#!string!brand_0001!# - #!string!brand_0002!#</title>
@@ -39,7 +39,7 @@
 <br />
 <!-- end configure-header -->
 
-<!-- start configure-menu-entry -->
+<!-- start configure-footer -->
 <table class="hidden_table" width="100%">
 	<tr>
 		<td class="td_hidden">
@@ -57,4 +57,7 @@
 <img src="#!data!url::skins!#/#!data!sys::skin!#/images/t.png" onload="show_on_load();" border="0" />
 <img src="#!data!url::skins!#/#!data!sys::skin!#/images/t.png" onload="hide_on_load();" border="0" />
 </html>
+<!-- end configure-footer -->
+
+<!-- start configure-menu-entry -->
 <!-- end configure-menu-entry -->
