* Updated the ScanCore SQL schema to link the Anvil! smtp entry to an anvil!. * Added some more menu items to the new Configure script. * Added support to InstallManifest for running a user-defined /root/post_install script at the end of an install.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -359,3 +359,7 @@ $(function() {
 </table>
 <br />
 <!-- end no-definition-file -->
+
+<!-- start subtle_text -->
+<span class="subtle_text">#!replace!string!#</span>
+<!-- end subtle_text -->
