* Added two new modules; AN::Tools::Web, which will handle all methods related to displaying things to user's browsers, and AN::Tools::Validate which will contain methods used to validate user input. * Moved AN::Tools::String->read_words() over to AN::Tools::Storage and updated all references to this method to reflect the change. * Moved AN::Tools::Get->template() to the new AN::Tools::Web module. * Created AN::Tools::Web->no_db_access() to display a simple error message when there is no access to any ScanCore database. * Added a place-holder menu entry to 'configure' for managing ScanCore databases (which will later allow the user to update striker.conf's 'scancore::x::y' entries). * Re-enabled checking an ISO's med5sum in anvil-generate-iso.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -25,6 +25,32 @@
 <!-- This contains panels inserted into templates -->
 <!-- ============================================ -->
 
+<!-- start no-database-access -->
+<table>
+	<tr>
+		<td colspan="2" class="title">
+			#!string!title_0192!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_bad_bold">
+			#!string!row_0033!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0358!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end no-database-access -->
+
 <!-- start configure-menu -->
 <table>
 	<tr>
