* Replaced a bunch of 'or die' with 'or $an->Alert->error()' calls (many, many more to do still) * Created AN::Tools::Get->target_details() to gather information about a node or dashboard directly (though for now, just enough data is gathered for saving Anvil! systems via the new 'confifure' tool). * Removed a commented out striker.conf because it's just too much mess for something I'm not immediately working on. * Created configure->save_anvil() which is the start of the logic to actually save the Anvil! when asked to do so by a user. Decided to significantly reduce what is asked of the user by getting just enough info to log into the nodes and pull the data ourselves.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -55,3 +55,31 @@
 		</td>
 	</tr>
 <!-- end break-bar -->
+
+<!-- start error-messages -->
+<table>
+	<tr>
+		<td colspan="2" class="title">
+			#!replace!title!#
+		</td>
+	</tr>
+#!replace!errors!#
+	<tr>
+		<td colspan="2">
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end error-messages -->
+
+<!-- start error-entry -->
+	<tr>
+		<td class="#!replace!row_class!#">
+			#!replace!row_message!#
+		</td>
+		<td class="#!replace!body_class!#">
+			#!replace!body_message!#
+		</td>
+	</tr>
+<!-- end  -->
