* Finished AN::Tools::Get->target_details() (at least as much as I need at this time). * Bumped all AN::Tools::Get logging to log level 3. * Added a bug where the 'task' CGI variable wasn't passed when trying to save a new Anvil! form in configure.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -39,8 +39,12 @@
 <!-- end generic-4column-menu-entry -->
 
 <!-- start disabled_input -->
-	<span class="highlight_unavailable">--</span>
+<span class="highlight_unavailable">--</span>
 <!-- end disabled_input -->
+
+<!-- start hidden_input -->
+<input type="hidden" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" />
+<!-- end hidden_input -->
 
 <!-- start form-wrapper -->
 <form method="post">
