* You can now delete Anvil! systems via 'configure'! * Created AN::Tools::Get->anvil_data() which returns the details on a given Anvil! (using either and Anvil! name or UUID as input).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -46,6 +46,10 @@
 <input type="hidden" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" />
 <!-- end hidden_input -->
 
+<!-- start link-button -->
+<a href="#!replace!url!#" name="#!replace!name!#" id="#!replace!id!#" class="bold_button">#!replace!value!#</a>
+<!-- end link-button -->
+
 <!-- start button_input -->
 <input type="submit" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" class="bold_button">
 <!-- end button_input -->
@@ -91,3 +95,51 @@
 		</td>
 	</tr>
 <!-- end  -->
+
+<!-- start confirm-message -->
+<table>
+	<tr>
+		<td colspan="2" class="title">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td class="#!replace!row_class!#">
+			#!replace!row_body!#
+		</td>
+		<td class="#!replace!message_class!#">
+			#!replace!message_body!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			#!replace!button!#
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end confirm-message -->
+
+<!-- start success-message -->
+<table>
+	<tr>
+		<td colspan="2" class="title">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td class="#!replace!row_class!#">
+			#!replace!row_body!#
+		</td>
+		<td class="#!replace!message_class!#">
+			#!replace!message_body!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end success-message -->
