--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -38,9 +38,28 @@
 	</tr>
 <!-- end generic-4column-menu-entry -->
 
+<!-- start textarea-4column-menu-entry -->
+	<tr>
+		<td class="#!replace!row_class!#">
+			#!replace!row_body!#
+		</td>
+		<td class="#!replace!message_class!#" colspan="2" style="text-align: left;">
+			#!replace!message_body!#<br />
+			#!replace!textarea!#
+		</td>
+		<td class="#!replace!url_class!#" style="text-align: left;">
+			#!replace!url_body!#
+		</td>
+	</tr>
+<!-- end textarea-4column-menu-entry -->
+
 <!-- start disabled_input -->
 <span class="highlight_unavailable">--</span>
 <!-- end disabled_input -->
+
+<!-- start textarea_input -->
+<textarea name="#!replace!name!#" id="#!replace!id!#" class="textarea_large">#!replace!value!#</textarea>
+<!-- end textarea_input -->
 
 <!-- start hidden_input -->
 <input type="hidden" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" />
