* An abortive attempt to move AN::Tools::Storage->read_words() to use XML::Simple resulted in some changes to core AN::Tools modules (including some bug fixes). Abandoned because we'll need to find a way to merge the multiple read-in XML words files into a common $an->data->{strings} hash, deal with UTF-8, etc. Too big of a job given the current list of pressing issues. * Finished the 'notifications' menu in 'configure', *except* for the ability to link notification targets to Anvil! systems. That's up next. * Deleted a broken/duplicate configure->save_smtp(). * Removed the ability to call AN::Tools::Log->entry() using variables passed in as an array.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -138,3 +138,53 @@
 <img src="#!data!url::skins!#/#!data!sys::skin!#/images/t.png" onload="hide_on_load();" border="0" />
 </html>
 <!-- end configure-footer -->
+
+<!-- start alert-level-explanation -->
+<table class="hidden_table">
+	<!-- debug -->
+	<tr>
+		<td style="text-align: left;">
+			<span class="highlight_detail">#!string!alert_level_0001!#</span>
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0201!#
+		</td>
+	</tr>
+	<!-- info -->
+	<tr>
+		<td style="text-align: left;">
+			<span class="highlight_detail">#!string!alert_level_0002!#</span>
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0202!#
+		</td>
+	</tr>
+	<!-- notice -->
+	<tr>
+		<td style="text-align: left;">
+			<span class="highlight_detail">#!string!alert_level_0003!#</span>
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0203!#
+		</td>
+	</tr>
+	<!-- warning -->
+	<tr>
+		<td style="text-align: left;">
+			<span class="highlight_detail">#!string!alert_level_0004!#</span>
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0204!#
+		</td>
+	</tr>
+	<!-- critical -->
+	<tr>
+		<td style="text-align: left;">
+			<span class="highlight_detail">#!string!alert_level_0005!#</span>
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0205!#
+		</td>
+	</tr>
+</table>
+<!-- end alert-level-explanation -->
