--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -113,7 +113,7 @@
 			#!replace!body_message!#
 		</td>
 	</tr>
-<!-- end  -->
+<!-- end error-entry -->
 
 <!-- start confirm-message -->
 <table>
