--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -141,6 +141,15 @@
 
 <!-- start alert-level-explanation -->
 <table class="hidden_table">
+	<!-- ignore -->
+	<tr>
+		<td style="text-align: left;">
+			<span class="highlight_detail">#!string!alert_level_0006!#</span>
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0207!#
+		</td>
+	</tr>
 	<!-- debug -->
 	<tr>
 		<td style="text-align: left;">
@@ -187,4 +196,5 @@
 		</td>
 	</tr>
 </table>
+#!string!explain_0209!#
 <!-- end alert-level-explanation -->
