* Created (but have not yet tested) ScanCore's update_db_owners(), update_db_anvils(), update_db_nodes(), update_db_recipients(), update_db_manifests(), and update_db_smtp() functions to syncronyze their respective database tables. Have not yet done 'variables' as I am still pondering how to best implement that one. * Cleaned up the new 'configure' main page to merge Backup and Load and added an "Advanced Options" option that will eventually handle variable tuning. * Added a confirmation prompt for enabling Install Target and made the Install Target work in the main page function as it doesn't need a menu of its own. * Converted all of 'configure's static <a href ... > entries into one of two template to further reduce the amount of static HTML in the program.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -66,8 +66,12 @@
 <!-- end hidden_input -->
 
 <!-- start link-button -->
-<a href="#!replace!url!#" name="#!replace!name!#" id="#!replace!id!#" class="bold_button">#!replace!value!#</a>
+<a href="#!replace!url!#" name="#!replace!name!#" id="#!replace!id!#" alt="#!replace!alt!#" class="button">#!replace!value!#</a>
 <!-- end link-button -->
+
+<!-- start bold-link-button -->
+<a href="#!replace!url!#" name="#!replace!name!#" id="#!replace!id!#" alt="#!replace!alt!#" class="bold_button">#!replace!value!#</a>
+<!-- end bold-link-button -->
 
 <!-- start button_input -->
 <input type="submit" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" class="bold_button">
@@ -127,7 +131,9 @@
 			#!replace!row_body!#
 		</td>
 		<td class="#!replace!message_class!#">
-			#!replace!message_body!#
+			<br />
+			#!replace!message_body!#<br />
+			<br />
 		</td>
 	</tr>
 	<tr>
