* Created new 'tools/striker-manage-install-target' (and associated setuid C-wrapper) to enabale, disable and report the state of the Install Target feature. * Renamed AN::Tools::Get->dhcpd_state() to ->install_target_state() and switched it to use the new 'tools/striker-manage-install-target' tool. * Created configure->manage_install_target() with uses 'tools/striker-manage-install-target' to enable/disable the install target function.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/web.html
+++ b/html/skins/alteeve/web.html
@@ -168,3 +168,27 @@
 </table>
 <br />
 <!-- end success-message -->
+
+<!-- start failure-message -->
+<table>
+	<tr>
+		<td colspan="2" class="title">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td class="#!replace!row_class!#">
+			#!replace!row_body!#
+		</td>
+		<td class="#!replace!message_class!#">
+			#!replace!message_body!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end failure-message -->
