--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -134,7 +134,7 @@ $(function() {
 	<tr>
 		<td>
 			<b>#!string!title_0113!#</b><br />
-			#!string!message_0272!#<br />
+			#!replace!anvil_message!#<br />
 			#!string!message_0273!#<br />
 		</td>
 		<td>
