--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -2033,8 +2033,8 @@
 			#!string!row_0134!#
 		</td>
 		<td>
-			#!string!explain_0039!#<br />
-			#!string!explain_0040!#<br />
+			#!replace!message1!#<br />
+			#!replace!message2!#<br />
 		</td>
 	</tr>
 </table>
@@ -2053,7 +2053,7 @@
 			#!string!row_0133!#
 		</td>
 		<td>
-			#!string!explain_0039!#<br />
+			#!replace!explain!#<br />
 			#!string!explain_0041!#<br />
 		</td>
 	</tr>
