--- a/html/skins/alteeve/main-page.html
+++ b/html/skins/alteeve/main-page.html
@@ -33,7 +33,7 @@
 <table>
 	<tr>
 		<td colspan="3">
-			#!string!title_0116!#
+			#!replace!title!#
 		</td>
 	</tr>
 <!-- end connection-error-table-header -->
@@ -100,7 +100,7 @@
 			#!string!row_0043!#
 		</td>
 		<td>
-			#!string!message_0045!#<br />
+			#!replace!message!#<br />
 		</td>
 	</tr>
 </table>
