--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -223,7 +223,7 @@
 		</td>
 		<td>
 			<br />
-			#!string!message_0302!#<br />
+			#!replace!message!#<br />
 			#!string!message_0303!#<br />
 			<br />
 		</td>
@@ -330,7 +330,7 @@
 			<br />
 			#!string!title_0131!#<br />
 			<br />
-			#!string!explain_0052!#<br />
+			#!replace!explain!#<br />
 			#!string!explain_0053!#<br />
 			<br />
 		</td>
@@ -786,7 +786,7 @@
 			#!string!row_0151!#
 		</td>
 		<td>
-			#!string!message_0328!#
+			#!replace!message!#
 		</td>
 	<tr>
 </table>
