--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -116,7 +116,7 @@
 <table>
 	<tr>
 		<td colspan="2">
-			<b>#!string!title_0030!#</b>
+			<b>#!replace!title!#</b>
 		</td>
 	</tr>
 	<tr>
@@ -177,7 +177,7 @@
 
 <!-- start insert-media-server-off -->
 			#!string!explain_0021!#<br />
-			#!string!message_0070!#<br />
+			#!replace!message!#<br />
 <!-- end insert-media-server-off -->
 
 <!-- start insert-media-footer -->
@@ -193,7 +193,7 @@
 <table>
 	<tr>
 		<td colspan="2">
-			<b>#!string!title_0031!#</b>
+			<b>#!replace!title!#</b>
 		</td>
 	</tr>
 	<tr>
@@ -254,7 +254,7 @@
 
 <!-- start eject-media-server-off -->
 			#!string!explain_0021!#<br />
-			#!string!message_0070!#<br />
+			#!replace!message!#<br />
 <!-- end eject-media-server-off -->
 
 <!-- start saving-server-config -->
@@ -289,7 +289,7 @@
 	<form method="post">
 	<tr>
 		<td colspan="4">
-			<b>#!string!title_0032!#</b>
+			<b>#!replace!title!#</b>
 		</td>
 	</tr>
 	<tr><td style="height:10px; padding:0px" colspan="4"></td></tr>
@@ -432,7 +432,7 @@
 <!-- start add-server-to-anvil-header-details -->
 	<tr>
 		<td colspan="2">
-			<b>#!string!title_0033!#</b>
+			<b>#!replace!title!#</b>
 		</td>
 	</tr>
 	<tr>
@@ -1825,7 +1825,7 @@
 	</tr>
 	<tr>
 		<td>
-			<span class="highlight_good">#!string!row_0083!#</span>: #!string!message_0205!#<br />
+			<span class="highlight_good">#!string!row_0083!#</span>: #!replace!message!#<br />
 		</td>
 	</tr>
 <!-- end delete-server-success -->
@@ -1851,7 +1851,7 @@
 <!-- start remove-vm-definition-wrong-definition-file -->
 			<br />
 			<span class="highlight_bad"><b><u>#!string!row_0126!#</u></b></span> #!string!message_0206!#<br />
-			#!string!message_0207!#<br />
+			#!replace!message!#<br />
 			#!string!message_0208!#<br />
 			#!string!brand_0011!#<br />
 			<br />
@@ -1860,7 +1860,7 @@
 <!-- start remove-vm-definition-failed -->
 			<br />
 			<span class="highlight_bad"><b>#!string!row_0044!#</b></span>! #!string!message_0068!#<br />
-			#!string!message_0210!#<br />
+			#!replace!message!#<br />
 			#!string!brand_0011!#<br />
 			<br />
 <!-- end remove-vm-definition-failed -->
@@ -1868,7 +1868,7 @@
 <!-- start archive-file-failed -->
 			<br />
 			<span class="highlight_bad"><b>#!string!row_0044!#</b></span>! #!string!message_0068!#<br />
-			#!string!message_0212!#<br />
+			#!replace!message!#<br />
 			#!string!brand_0011!#<br />
 			<br />
 <!-- end archive-file-failed -->
@@ -2339,7 +2339,7 @@
 <!-- start recover-resource-manager-check-storage -->
 	<tr>
 		<td>
-			#!string!message_0251!#<br />
+			#!replace!message!#<br />
 			#!string!message_0252!#<br />
 		</td>
 	</tr>
