* Created AN::Tools::Striker to hold methods related to Striker-specific tasks. Created ->load_anvil() as the first working method that uses either the anvil_uuid CGI variable or a passed in UUID and loads the related Anvil!'s data into the active hash keys. * Updated AN::Tools::Web->get_cgi() added dots to the passed in CGI variable names to that all passed-in CGI variable names and values line up nicely in the log file. * Started working on making the new configure system work with the main Striker program! * Made 'configre' show the 'Back' button when a referer from Striker called it. * Big One!! Removed all of the old '$conf' entries in the main Striker program and replaced them with '$an' equivelants! I suspect there are several instances where '$an->data' is being referenced inside double-quotes, which will break things, but the bulk are properly escaped now. I've been wanting to get this done for an age!
Making good progress on the cut-over, but still lots to do before Striker is usable again.

Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -17,7 +17,7 @@
 			#!replace!back!#
 		</td>
 		<td class="td_hidden">
-			<a href="/cgi-bin/striker?logo=true"><img class="logo" src="#!conf!url::skins!#/#!conf!sys::skin!#/images/logo_striker_01.png" alt="#!string!brand_0001!# - #!string!brand_0002!#"></a>
+			<a href="/cgi-bin/configure"><img class="logo" src="#!conf!url::skins!#/#!conf!sys::skin!#/images/logo_striker_01.png" alt="#!string!brand_0001!# - #!string!brand_0002!#"></a>
 		</td>
 		<td class="td_hidden" style="width: 50px;">
 			#!replace!refresh!#
@@ -54,7 +54,7 @@ $(function() {
 			#!replace!back!#
 		</td>
 		<td class="td_hidden">
-			<a href="/cgi-bin/striker?logo=true"><img class="logo" src="#!conf!url::skins!#/#!conf!sys::skin!#/images/logo_striker_01.png" alt="#!string!brand_0001!# - #!string!brand_0002!#"></a>
+			<a href="/cgi-bin/configure"><img class="logo" src="#!conf!url::skins!#/#!conf!sys::skin!#/images/logo_striker_01.png" alt="#!string!brand_0001!# - #!string!brand_0002!#"></a>
 		</td>
 		<td class="td_hidden" style="width: 50px;">
 			#!replace!refresh!#
