--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -95,6 +95,21 @@
 	</tr>
 <!-- end configure-menu-entry -->
 
+<!-- start configure-anvil-entry -->
+	<tr>
+		<td class="button">
+			#!replace!view!#
+		</td>
+		<td style="text-align: left;">
+			<!-- formatting for this is in 'message_0465' -->
+			#!replace!description!#
+		</td>
+		<td>
+			#!replace!edit!#
+		</td>
+	</tr>
+<!-- end configure-anvil-entry -->
+
 <!-- start configure-menu-spacer -->
 	<tr>
 		<td colspan="3" height="10">
