* Created 'AN::Tools::Striker->scan_node()' and '->scan_anvil()' methods which will soon handle the traditional, direct scanning of a nodes. * Created a new 'nodes_cache' table and associated 'AN::Tools::ScanCore->insert_or_update_nodes_cache()' and '->get_nodes_cache()' methods to handle it. Also created ScanCore's 'update_db_nodes_cache()' function to sync the table as needed. This will store cached information about a given node for a given host. Example is a Striker dashboard caching a node's power check command. * Added a call to globally disable TRIGGERs when ScanCore updates it's core DB tables. Will add it to agents once I verify it works as intended.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -100,7 +100,7 @@
 		<td class="button">
 			#!replace!view!#
 		</td>
-		<td style="text-align: left;">
+		<td style="text-align: left;" style="max-width: 90%">
 			<!-- formatting for this is in 'message_0465' -->
 			#!replace!description!#
 		</td>
